fix(account): minor fixes here and there
issue #69 (account info)
- resize user name to 20px
- add missing locales for account detail placeholder text, label, gender etc
- replace datepicker button icon
- change city and region dropdown arrow icon color
- change pin my location button map marker icon
- remove outer box and padding

issue #73 (order history)
- style upload receipt button
- add expand and collapse button
- change "readyToShip" order label text color to white
- change order item details background color
- fix overflowing invoice button

--- a/public/scss/pages/Account.module.scss
+++ b/public/scss/pages/Account.module.scss
@@ -8,6 +8,22 @@
   position: relative;
 }
 
+.hello
+{
+  @include flex(row, center, flex-start);
+  @include fixedWidth(100%);
+  position: relative;
+
+  h1, h2, h3, h4, h5, h6, p
+  {
+    @include flex(row, center, flex-start);
+    @include fixedWidth(100%);
+    @include LargeSemiBold;
+    margin: 0 0 12px;
+    padding: 0;
+  }
+}
+
 .account
 {
   @include fixedWidth(100%);
@@ -512,7 +528,7 @@
 
   &_content
   {
-    padding: 16px;
+    padding: 0;
   }
 
   &_body
@@ -622,6 +638,7 @@
     border: none;
     border-radius: 0;
     box-shadow: 0 0 0 transparent;
+    background-color: $color_white;
     color: $color_text;
 
     &[type="number"]
@@ -631,6 +648,7 @@
 
     &:hover,
     &:focus,
+    &:focus-visible,
     &:active
     {
       outline: 0;
@@ -662,6 +680,40 @@
           border: none !important;
           height: auto;
         }
+
+        & > [class*="react-date-picker"]
+        {
+          padding-left: 0;
+          padding-right: 0;
+          padding-top: 0;
+          height: 32px;
+          margin-bottom: -4px;
+
+          border: none;
+        }
+
+        & > [class*="react-date-picker--disabled"]
+        {
+          @include debug();
+          background-color: transparent;
+        }
+
+        [class*="react-date-picker__wrapper"]
+        {
+          & > button
+          {
+            @include flex(row, center, center);
+            @include fixedSize(32px);
+            margin-top: 0 !important;
+            padding: 0;
+          }
+
+          & > div[class="react-date-picker__inputGroup"]
+          {
+            @include flex(row, center, flex-start);
+            @include fixedHeight(32px);
+          }
+        }
       }
 
       [class*="mapSelectArea"]
@@ -676,6 +728,7 @@
 
         &:hover,
         &:focus,
+        &:focus-visible,
         &:active
         {
           background-color: $color_white;
@@ -685,6 +738,27 @@
         &:hover
         {
           color: $color_text;
+        }
+
+        &::before
+        {
+          content: "";
+          @include fixedSize(18px);
+          @include flex(row, center, center);
+
+          position: relative;
+          margin: 0 10px 0 0;
+
+          background-color: transparent;
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-size: auto 100%;
+          background-image: url("data:image/svg+xml,%3Csvg width='14' height='17' viewBox='0 0 14 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 14.675L10.7125 10.9625C11.4467 10.2282 11.9466 9.29279 12.1492 8.2744C12.3517 7.25601 12.2477 6.20044 11.8503 5.24116C11.4529 4.28188 10.78 3.46197 9.91669 2.88512C9.05334 2.30827 8.03833 2.00037 7 2.00037C5.96167 2.00037 4.94666 2.30827 4.08332 2.88512C3.21997 3.46197 2.54706 4.28188 2.14969 5.24116C1.75231 6.20044 1.64831 7.25601 1.85084 8.2744C2.05337 9.29279 2.55333 10.2282 3.2875 10.9625L7 14.675ZM7 16.796L2.227 12.023C1.28301 11.079 0.64014 9.87625 0.379696 8.56688C0.119253 7.25751 0.25293 5.90032 0.763824 4.66692C1.27472 3.43352 2.13988 2.37932 3.24991 1.63763C4.35994 0.895932 5.66498 0.500053 7 0.500053C8.33502 0.500053 9.64006 0.895932 10.7501 1.63763C11.8601 2.37932 12.7253 3.43352 13.2362 4.66692C13.7471 5.90032 13.8808 7.25751 13.6203 8.56688C13.3599 9.87625 12.717 11.079 11.773 12.023L7 16.796ZM6.25 6.49999V4.24999H7.75V6.49999H10V7.99999H7.75V10.25H6.25V7.99999H4V6.49999H6.25Z' fill='%23D0D0D0'/%3E%3C/svg%3E%0A");
+        }
+
+        svg
+        {
+          display: none;
         }
       }
     }
@@ -709,8 +783,7 @@
     {
       &[class$="-control"]
       {
-        @include fixedWidth(100%);
-        @include fixedHeight(100%);
+        @include fixedSize(100%);
         border-radius: 0 !important;
         border-color: transparent;
         box-shadow: 0 0 0 transparent !important;
@@ -721,9 +794,8 @@
           &:not([class*="IndicatorsContainer"])
           {
             @include flex(row, flex-start, flex-start);
-            @include fixedHeight(38px);
-            padding-left: 0;
-            padding-right: 0;
+            @include fixedHeight(32px);
+            padding: 0;
           }
 
           &[class*="IndicatorsContainer"]
@@ -731,6 +803,14 @@
             [class*="-indicatorSeparator"]
             {
               display: none;
+            }
+
+            [class$="-indicatorContainer"]
+            {
+              svg
+              {
+                fill: $color_text;
+              }
             }
           }
         }
@@ -745,7 +825,6 @@
       {
         @include flex(row, center, flex-start);
         @include fixedSize(100%);
-        @include fixedHeight(100%);
         font-size: 1rem;
         margin: 0;
         padding: 0;
@@ -958,6 +1037,38 @@
     {
       margin-bottom: 24px;
     }
+
+    & > div
+    {
+      &:first-child
+      {
+        &::after
+        {
+          content: "";
+          @include transition();
+          @include flex(row, center, center);
+          @include absolute(16px, 16px);
+          @include fixedSize(32px);
+    
+          background-color: $color_elements_line_darker;
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-size: auto;
+          background-image: url("data:image/svg+xml,%3Csvg stroke='currentColor' fill='currentColor' stroke-width='0' viewBox='0 0 24 24' height='1em' width='1em' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 15h14l-7-8z'%3E%3C/path%3E%3C/svg%3E");
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+
+        &:only-child
+        {
+          &::after
+          {
+            background-image: url("data:image/svg+xml,%3Csvg stroke='currentColor' fill='currentColor' stroke-width='0' viewBox='0 0 24 24' height='1em' width='1em' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11.998 17 7-8h-14z'%3E%3C/path%3E%3C/svg%3E");
+          }
+        }
+      }
+    }
   }
 
   &_orderHeader,
@@ -974,7 +1085,18 @@
 
   &_orderInnerHeader
   {
-    @include flex(column, stretch, center);
+    @include flex(column, stretch, flex-start);
+
+    [class*="orderTitle"],
+    [class*="paymentStatus"]
+    {
+      @include fixedWidth(calc(100% - (16px * 4)));
+    }
+
+    [class*="paymentStatus"]
+    {
+      margin-left: 0;
+    }
   }
 
   &_paymentStatus
@@ -994,9 +1116,10 @@
 
     &[class*="completed"],
     &[class*="paid"],
-    &[class*="shipped"]
+    &[class*="shipped"],
+    &[class*="readyToShip"]
     {
-      color: $color_white;
+      color: $color_white !important;
     }
 
     &[class*="cancelled"]
@@ -1239,6 +1362,41 @@
   {
     @include SmallSmall;
   }
+  
+  &_orderedItemDetailUploadReceipt
+  {
+    @include flex(row, center, center);
+    max-width: 50%;
+    position: relative;
+    cursor: pointer;
+
+    input[type="file"]
+    {
+      opacity: 0;
+      cursor: pointer;
+    }
+
+    & > label
+    {
+      @include flex(row, center, center);
+      @include fixedSize(100%);
+      @include absolute(0, 0, 0, 0);
+      @include SmallSmall;
+      z-index: 2;
+      margin: 0;
+      padding: 0;
+      pointer-events: none;
+    }
+
+    &:hover,
+    &:focus-visible
+    {
+      & > label
+      {
+        text-decoration: underline;
+      }
+    }
+  }
 
   &_buyerNoteContainer,
   &_shippingDetails,
@@ -1252,7 +1410,7 @@
     padding: 16px 16px 0;
 
     border: none;
-    background: $color_elements_line;
+    background: $color_elements;
     color: $color_text;
 
     &::after
